Fix Back to Results Button on Mobile

--- a/static/style.css
+++ b/static/style.css
@@ -113,6 +113,22 @@ body{
     padding-bottom: 5px;
     width: 100%;
   }
+  .run-more-button{
+    background-color: #7dc243;
+    border-color: #7dc243;
+    color: #ffffff;
+    height: 50px;
+    font-size: 16px;
+    font-family: Roboto, sans-serif;
+    border-radius: 6px;
+    padding-left: 25px;
+    padding-right: 25px;
+    padding-top: 5px;
+    padding-bottom: 5px;
+    width: 20%;
+    display: none;
+    margin: 0 auto;
+  }
   .spinner-area{
     width: 50%;
     margin: 0 auto;
@@ -209,14 +225,12 @@ textarea::placeholder {
   .footer-logo{
     width: 50%;
   }
+  .run-more-button{
+    width: 50%;
+  }
 }
 .runAgain{
   display: none;
-}
-#run-more-button{
-  display: none;
-  width: 20%;
-  margin: 0 auto;
 }
 .user-agent{
   margin-bottom: 10px;
